# kernel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
cli/: kernel_report.py  kernel_verify.py
config/policies/: default.yaml
docs/: architecture.md  index.md  pilots.md  roadmap.md  threat-model.md
docs/compliance/: eu_ai_act.md
docs/integrations/: mcp.md  ros2.md
docs/patterns/: dual_llm_sandwich.md
docs/superpowers/plans/: 2026-05-16-ros2-bridge.md  2026-05-17-eu-ai-act-report.md  2026-05-17-sandwich-pattern.md  2026-05-18-mcp-audit-server.md
docs/superpowers/specs/: 2026-05-18-mcp-audit-server-design.md
examples/: mcp_claude_desktop_config.json  sandwich_email_triage.py  sandwich_real_anthropic.py
kernel/audit/: __init__.py  store.py
kernel/mcp/: __init__.py  errors.py  resources.py  schemas.py  server.py  tools.py
kernel/sandwich/: __init__.py  privileged.py  providers.py  quarantined.py  references.py  schemas.py
scripts/: generate_demo_chain.py
services/: __init__.py
services/autonomy/: __init__.py  geofence.py  intercept_planner.py  mavsdk_sender.py  schemas.py
services/decision/: __init__.py  audit_chain.py  cli_verify.py  guardrails.py  llm_advisor.py  llm_client.py  llm_graph.py  policy_loader.py  roe.py  rules.py  sanitize.py  schemas.py  threat_graph.py
services/detectors/camera/: calibration.py  yolo_service.py
services/detectors/rf/: live_listener.py  mock_publisher.py  odid_parser.py  odid_service.py  wifi_oui_service.py
services/fusion/: __init__.py  association.py  build_catalog.py  fusion_service.py  imm_engine.py  kf_engine.py  model_matcher.py  track_manager.py
services/integrations/: ros2_bridge.py  ros2_subscriber_example.py
services/schemas/: __init__.py  detection.py  rf.py  track.py
shared/: __init__.py  auth.py  geo.py  lifecycle.py  logging_setup.py  rate_limit.py
tests/: __init__.py  conftest.py
tests/audit/: conftest.py  test_store.py
tests/cli/: __init__.py  test_kernel_report.py  test_kernel_verify.py
tests/decision/: __init__.py  test_audit_chain.py  test_guardrails.py  test_llm_client.py  test_llm_graph.py  test_policy_loader.py  test_roe.py  test_rules.py  test_sanitize.py  test_threat_graph.py  test_threat_graph_unification.py
tests/fusion/: __init__.py  test_association.py  test_geo.py  test_kf_engine.py  test_model_matcher.py  test_track_manager.py
tests/integrations/: test_ros2_bridge.py
tests/mcp/: conftest.py  test_integration.py  test_resources.py  test_server.py  test_tools.py
tests/sandwich/: test_sandwich.py
